Static site translation to polish, paginator.

--- a/Build_IT_Web/ClientApp/app/components/carousel/carousel.component.html
+++ b/Build_IT_Web/ClientApp/app/components/carousel/carousel.component.html
@@ -22,8 +22,8 @@
                         <img src="../../../assets/images/snow_load_carousel.jpg"
                              alt="Snow load">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Snow loads</h5>
-                            <p>Check out calculators for snow loads.</p>
+                            <h5>{{'carousel.SnowLoads.Header' | translate}}</h5>
+                            <p>{{'carousel.SnowLoads.Description' | translate}}</p>
                         </div>
                     </div>
                 </div>
@@ -35,8 +35,8 @@
                         <img src="../../../assets/images/dead_load_carousel.jpg"
                              alt="Lorem ipsum">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Dead loads</h5>
-                            <p>Check out calculators for dead loads.</p>
+                            <h5>{{'carousel.DeadLoads.Header' | translate}}</h5>
+                            <p>{{'carousel.DeadLoads.Description' | translate}}</p>
                         </div>
                     </div>
                 </div>
@@ -48,8 +48,8 @@
                         <img src="../../../assets/images/about_me_carousel.jpg"
                              alt="Lorem ipsum">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>About me</h5>
-                            <p>Read more about the author of this site.</p>
+                            <h5>{{'carousel.About.Header' | translate}}</h5>
+                            <p>{{'carousel.About.Description' | translate}}</p>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                data-slide="prev">
                 <span class="carousel-control-prev-icon"
                       aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+                <span class="sr-only">{{'carousel.Previous' | translate}}</span>
             </a>
             <a class="carousel-control-next"
                href="#carouselExampleIndicators"
@@ -68,7 +68,7 @@
                data-slide="next">
                 <span class="carousel-control-next-icon"
                       aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
+                <span class="sr-only">{{'carousel.Next' | translate}}</span>
             </a>
         </div>
     </div>
