--- a/Build_IT_Web/ClientApp/app/modules/loads/components/snow-loads-components/snow-loads/snow-loads.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/loads/components/snow-loads-components/snow-loads/snow-loads.component.html
@@ -1,5 +1,5 @@
 ﻿
-    <h1 class="text-center">Snow loads calculators</h1>
+    <h1 class="text-center">{{'snowLoadsModule.Header' | translate}}</h1>
 
 <app-script-cards [groupFilters]="loadsGroupFilter"
                   [tagFilters]="loadsTagFilter"></app-script-cards>
