--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/figures/parameter-figures.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/figures/parameter-figures.component.html
@@ -3,7 +3,7 @@
                          (opened)="expanded()">
         <mat-expansion-panel-header>
             <mat-panel-title>
-                Pictures
+                {{'scriptCalculator.Controls.Figures' | translate}}
             </mat-panel-title>
         </mat-expansion-panel-header>
         <div *ngIf="isExpanded">
