--- a/Build_IT_Web/ClientApp/app/components/about-me/about-me.component.html
+++ b/Build_IT_Web/ClientApp/app/components/about-me/about-me.component.html
@@ -1,46 +1,24 @@
 ﻿<div class="mt-2 ml-5 mr-5">
-    <h3>Overall informations</h3>
+    <h3>{{'about.Overall.Header' | translate}}</h3>
     <p>
-        The site contains a large number of calculators
-        which based mostly on Eurocodes with Polish national annexes.
+        {{'about.Overall.Description' | translate}}
     </p>
 </div>
-
 <div class="m-5">
     <div>
-        <h3>Snow load calculators</h3>
-        <p>
-            Mostly based on <i>Eurocode 1 - Actions on structures Part 1-3: General actions - Snow loads</i> with Polish national annex.
-            This calculator contains all possible design situations and roof types which are described in the document.
-            This calculators shouldn't be used for or doesn't have informations how to calculate:
-        </p>
+        <h3>{{'about.SnowLoad.Header' | translate}}</h3>
+        <p [innerHtml]="'about.SnowLoad.Description' | translate"></p>
         <ul>
-            <li>sites at altitudes above 1 500m,</li>
-            <li>impact snow loads resulting from sliding off or falling from a higher roof,</li>
-            <li>additional wind loads which could result from changes in shape or size of the construction works due to the presence of snow or the accretion of ice,</li>
-            <li>loads in areas where snow is present all year round,</li>
-            <li>ice loading,</li>
-            <li>lateral loading due to snow (e.g. lateral loads exerted by drifts),</li>
-            <li>snow loads on bridges.</li>
+            <li *ngFor="let position of 'about.SnowLoad.List'| translate">{{position}}</li>
         </ul>
     </div>
     <div>
-        <h3>Dead load calculator</h3>
-        <p>
-            Mostly based on <i>Eurocode 1 - Actions on structures Part 1-1: General actions - Densities, self-weight, imposed loads for buildings</i> with Polish national annex
-            and on Polish standard document <i>PN-82/B-02001 Building loads - permanent loads</i> which contains informations about the density of the building materials.
-            This calculator allows us to get the information about the weight of all layers in the structure.
-        </p>
+        <h3>{{'about.DeadLoad.Header' | translate}}</h3>
+        <p [innerHtml]="'about.DeadLoad.Description' | translate"></p>
     </div>
     <hr />
     <div>
-        <h3>Author: Konrad Kania</h3>
-        <p>
-            I graduated at the Technical University in Łódź at the faculty of Civil Engineering.
-            Currently, I also finished postgraduate studies at Polish Academy of Science and work for building company as a programmer since the beginning of March 2017.
-            I treat building designing with great passion the same as the programming.
-            This way of doing things and possibilities which comes with those two branches bring me an idea to make something for overall usage.
-            I started working on this site since September 2018 and I hope that there will be only more and better content available for everyone.
-        </p>
+        <h3>{{'about.Author.Header' | translate}}</h3>
+        <p [innerHtml]="'about.Author.Description' | translate"></p>
     </div>
 </div>
