--- a/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.html
@@ -11,7 +11,7 @@
         <ng-container matColumnDef="position">
             <th mat-header-cell
                 *matHeaderCellDef>
-                No.
+                
             </th>
             <td mat-cell
                 *matCellDef="let materialForCalculation">
@@ -24,7 +24,7 @@
             <th mat-header-cell
                 *matHeaderCellDef>
                 <div class="ml-3 mr-3 text-left">
-                    Category
+                    {{'deadLoadsModule.Category' | translate}}
                 </div>
             </th>
             <td mat-cell
@@ -40,7 +40,7 @@
             <th mat-header-cell
                 *matHeaderCellDef>
                 <div class="ml-3 mr-3 text-center">
-                    Name
+                    {{'deadLoadsModule.Name' | translate}}
                 </div>
             </th>
             <td mat-cell
@@ -56,14 +56,14 @@
             <th mat-header-cell
                 *matHeaderCellDef>
                 <div class="ml-3 mr-3 text-center">
-                    Length [cm]
+                    {{'deadLoadsModule.Length' | translate}}
                 </div>
             </th>
             <td mat-cell
                 *matCellDef="let materialForCalculation"
                 class="text-center">
                 <mat-form-field *ngIf="materialForCalculation.material.unit > 0; else noLengthBlock"
-                                class="ml-3">
+                                class="ml-3 smaller-input">
                     <input matInput
                            type="number"
                            class="text-center"
@@ -79,7 +79,7 @@
             <th mat-header-cell
                 *matHeaderCellDef>
                 <div class="ml-3 mr-3 text-center">
-                    Width [cm]
+                    {{'deadLoadsModule.Width' | translate}}
                 </div>
             </th>
             <td mat-cell
@@ -87,7 +87,7 @@
                 class="text-center">
 
                 <mat-form-field *ngIf="materialForCalculation.material.unit > 1; else noLengthBlock"
-                                class="ml-3">
+                                class="ml-3 smaller-input">
                     <input matInput
                            type="number"
                            class="text-center"
@@ -103,7 +103,7 @@
             <th mat-header-cell
                 *matHeaderCellDef>
                 <div class="ml-3 mr-3 text-center">
-                    Thickness [cm]
+                    {{'deadLoadsModule.Thickness' | translate}}
                 </div>
             </th>
             <td mat-cell
@@ -111,7 +111,7 @@
                 class="text-center">
 
                 <mat-form-field *ngIf="materialForCalculation.material.unit > 2; else noLengthBlock"
-                                class="ml-3">
+                                class="ml-3 smaller-input">
                     <input matInput
                            type="number"
                            class="text-center"
@@ -124,14 +124,14 @@
             <td mat-footer-cell
                 *matFooterCellDef
                 class="text-right">
-                Total:
+                {{'deadLoadsModule.Total' | translate}}
             </td>
         </ng-container>
         <ng-container matColumnDef="minDensity">
             <th mat-header-cell
                 *matHeaderCellDef>
-                <div class="ml-3 mr-3 text-center">
-                    Minimum<br />Density
+                <div class="ml-3 mr-3 text-center"
+                     [innerHtml]="'deadLoadsModule.MinimumDensity' | translate">
                 </div>
             </th>
             <td mat-cell
@@ -144,8 +144,8 @@
         <ng-container matColumnDef="maxDensity">
             <th mat-header-cell
                 *matHeaderCellDef>
-                <div class="ml-3 mr-3 text-center">
-                    Maximum<br />Density
+                <div class="ml-3 mr-3 text-center"
+                     [innerHtml]="'deadLoadsModule.MaximumDensity' | translate">
                 </div>
             </th>
             <td mat-cell
@@ -159,7 +159,7 @@
             <th mat-header-cell
                 *matHeaderCellDef>
                 <div class="ml-3 mr-3 text-center">
-                    Unit
+                    {{'deadLoadsModule.Unit' | translate}}
                 </div>
             </th>
             <td mat-cell
@@ -174,7 +174,7 @@
             <th mat-header-cell
                 *matHeaderCellDef>
                 <div class="ml-3 mr-3 text-center">
-                    Remove
+                    {{'deadLoadsModule.Remove' | translate}}
                 </div>
             </th>
             <td mat-cell
