--- a/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.scss
+++ b/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.scss
@@ -19,6 +19,10 @@ tr.fa-reorder{
     overflow-x: auto;
 }
 
+.smaller-input{
+    width: 100px;
+}
+
 /*.cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
