--- a/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads-data/dead-loads-data.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads-data/dead-loads-data.component.html
@@ -1,5 +1,5 @@
 ﻿    <mat-form-field class="m-2">
-        <mat-label>Categories</mat-label>
+        <mat-label>{{'deadLoadsModule.Categories' | translate}}</mat-label>
         <mat-select [(ngModel)]="selectedCategory"
                     name="category"
                     (selectionChange)="onCategoryChange()">
@@ -12,7 +12,7 @@
 
     <mat-form-field class="m-2"
                     *ngIf="subcategories">
-        <mat-label>Subcategories</mat-label>
+        <mat-label>{{'deadLoadsModule.Subcategories' | translate}}</mat-label>
         <mat-select [(ngModel)]="selectedSubcategory"
                     name="subcategory"
                     (selectionChange)="onSubcategoryChange()">
@@ -30,7 +30,7 @@
         <ng-container matColumnDef="name">
             <th mat-header-cell
                 *matHeaderCellDef>
-                Name
+                {{'deadLoadsModule.Name' | translate}}
             </th>
             <td mat-cell
                 *matCellDef="let material"
@@ -42,8 +42,8 @@
         <ng-container matColumnDef="minDensity">
             <th mat-header-cell
                 *matHeaderCellDef>
-                <div class="ml-3 mr-3 text-center">
-                    Minimum<br />Density
+                <div class="ml-3 mr-3 text-center"
+                     [innerHtml]="'deadLoadsModule.MinimumDensity' | translate">
                 </div>
             </th>
             <td mat-cell
@@ -55,8 +55,8 @@
         <ng-container matColumnDef="maxDensity">
             <th mat-header-cell
                 *matHeaderCellDef>
-                <div class="ml-3 mr-3 text-center">
-                    Maximum<br />Density
+                <div class="ml-3 mr-3 text-center"
+                     [innerHtml]="'deadLoadsModule.MaximumDensity' | translate">
                 </div>
             </th>
             <td mat-cell
@@ -69,7 +69,7 @@
             <th mat-header-cell
                 *matHeaderCellDef>
                 <div class="ml-3 mr-3 text-center">
-                    Unit
+                    {{'deadLoadsModule.Unit' | translate}}
                 </div>
             </th>
             <td mat-cell
@@ -81,7 +81,7 @@
             <th mat-header-cell
                 *matHeaderCellDef>
                 <div class="ml-3 mr-3 text-center">
-                    Add
+                    {{'deadLoadsModule.Add' | translate}}
                 </div>
             </th>
             <td mat-cell
