--- a/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads/dead-loads.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads/dead-loads.component.html
@@ -1,7 +1,7 @@
 ﻿
 <div class="text-center">
 
-    <h1>Dead loads calculator</h1>
+    <h1>{{'deadLoadsModule.Header' | translate}}</h1>
 
     <app-dead-loads-calculator [newMaterial]="newMaterial"></app-dead-loads-calculator>
     <app-dead-loads-data (materialAdded)="onMaterialAdded($event)"></app-dead-loads-data>
