--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-card/script-card.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-card/script-card.component.html
@@ -24,18 +24,18 @@
         <div class="actions">
             <button mat-stroked-button
                     [routerLink]="['/scripts/calculator', script.id]">
-                <span class="fa fa-calculator"></span> Calculate
+                <span class="fa fa-calculator"></span> {{'scriptCard.Calculate' | translate}}
             </button>
             <button mat-stroked-button
                     [routerLink]="['/scripts/edit', script.id]">
-                <span class="fa fa-edit"></span> Edit
+                <span class="fa fa-edit"></span> {{'scriptCard.Edit' | translate}}
             </button>
         </div>
-            <button mat-stroked-button 
-                    color="warn"
-                    class="float-right"
-                    (click)="delete(script)">
-                <span class="fa fa-remove"></span> Delete
-            </button>
+        <button mat-stroked-button
+                color="warn"
+                class="float-right"
+                (click)="delete(script)">
+            <span class="fa fa-remove"></span> {{'scriptCard.Delete' | translate}}
+        </button>
     </mat-card-actions>
 </mat-card>
