--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-cards/script-cards.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-cards/script-cards.component.html
@@ -1,6 +1,11 @@
 ﻿<div class="row mt-5 m-2">
-        <app-script-card *ngFor="let script of scripts"
-                         class="flex-column d-none d-flex col col-xl-3 col-lg-4 col-md-6 col-sm-12 col-auto mb-4"
-                         [script]="script"
-                         (deleted)="onDeleted($event)"></app-script-card>
+    <app-script-card *ngFor="let script of activeScripts"
+                     class="flex-column d-none d-flex col col-xl-3 col-lg-4 col-md-6 col-sm-12 col-auto mb-4"
+                     [script]="script"
+                     (deleted)="onDeleted($event)"></app-script-card>
 </div>
+<mat-paginator [length]="scripts.length"
+               [pageSize]="pageSize"
+               [pageSizeOptions]="pageSizeOptions"
+               (page)="onPageChanged($event)">
+</mat-paginator>
