--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
@@ -8,124 +8,138 @@
     </h3>
 
     <div class="full-width">
-        <label id="parameter-type">Pick parameter type</label>
+        <label id="parameter-type">{{'scriptsForm.Parameters.EditMode.ParameterTypePicker' | translate}}</label>
         <mat-radio-group aria-labelledby="parameter-type"
                          (change)="parameterTypeChanged()">
             <mat-radio-button class="ml-2"
                               #editable
-                              [value]="context.editable">Editable</mat-radio-button>
+                              [value]="context.editable">
+                {{'scriptsForm.Parameters.EditMode.ParameterTypes.Editable' | translate}}
+            </mat-radio-button>
             <mat-radio-button class="ml-2"
                               #static
-                              [value]="context.staticData">Static</mat-radio-button>
+                              [value]="context.staticData">
+                {{'scriptsForm.Parameters.EditMode.ParameterTypes.Static' | translate}}
+            </mat-radio-button>
             <mat-radio-button class="ml-2"
                               #calculable
-                              [value]="context.calculation">Calculable</mat-radio-button>
+                              [value]="context.calculation">
+                {{'scriptsForm.Parameters.EditMode.ParameterTypes.Calculable' | translate}}
+            </mat-radio-button>
         </mat-radio-group>
 
         <mat-checkbox (change)="parameterTypeChanged()"
                       [value]="context.visible"
                       class="ml-2"
-                      #visible>Visible</mat-checkbox>
+                      #visible>
+            {{'scriptsForm.Parameters.EditMode.ParameterTypes.Visible' | translate}}
+        </mat-checkbox>
         <mat-checkbox (change)="parameterTypeChanged()"
                       [value]="context.important"
                       class="ml-2"
-                      #important>Important</mat-checkbox>
+                      #important>
+            {{'scriptsForm.Parameters.EditMode.ParameterTypes.Important' | translate}}
+        </mat-checkbox>
         <mat-checkbox (change)="parameterTypeChanged()"
                       [value]="context.optional"
                       class="ml-2"
-                      #optional>Optional</mat-checkbox>
+                      #optional>
+            {{'scriptsForm.Parameters.EditMode.ParameterTypes.Optional' | translate}}
+        </mat-checkbox>
 
     </div>
 
     <mat-form-field class="m-2">
         <input matInput
                required
-               placeholder="Name"
+               placeholder="{{'scriptsForm.Parameters.EditMode.Name.Header' | translate}}"
                formControlName="name"
                [errorStateMatcher]="matcher"
                autocomplete="off" />
-        <mat-hint>Parameter name</mat-hint>
+        <mat-hint>{{'scriptsForm.Parameters.EditMode.Name.Hint' | translate}}</mat-hint>
         <mat-error *ngIf="parameterName && parameterName.hasError('maxlength') && !parameterName.hasError('required')">
-            Name should be maximum {{parameterName.errors.maxlength.requiredLength}} characters long.
+            {{'scriptsForm.Parameters.EditMode.Name.MaxLengthError' | translate:parameterName.errors.maxlength}}
         </mat-error>
-        <mat-error *ngIf="parameterName && parameterName.hasError('required')">
-            Name is <strong>required</strong>
+        <mat-error *ngIf="parameterName && parameterName.hasError('required')"
+                   [innerHtml]="'scriptsForm.Parameters.EditMode.Name.RequiredError' | translate">
         </mat-error>
     </mat-form-field>
 
     <mat-form-field class="m-2">
         <input matInput
-               placeholder="Unit"
+               placeholder="{{'scriptsForm.Parameters.EditMode.Unit.Header' | translate}}"
                formControlName="unit"
                [errorStateMatcher]="matcher"
                autocomplete="off" />
-        <mat-hint>Unit</mat-hint>
+        <mat-hint>{{'scriptsForm.Parameters.EditMode.Unit.Hint' | translate}}</mat-hint>
         <mat-error *ngIf="parameterUnit && parameterUnit.hasError('maxlength')">
-            Unit should be maximum {{parameterUnit.errors.maxlength.requiredLength}} characters long.
+            {{'scriptsForm.Parameters.EditMode.Unit.MaxLengthError' | translate:parameterUnit.errors.maxlength}}
         </mat-error>
     </mat-form-field>
 
     <mat-form-field class="m-2">
         <input matInput
-               placeholder="Document"
+               placeholder="{{'scriptsForm.Parameters.EditMode.Document.Header' | translate}}"
                formControlName="accordingTo"
                [errorStateMatcher]="matcher"
                autocomplete="off" />
-        <mat-hint>Document</mat-hint>
+        <mat-hint>{{'scriptsForm.Parameters.EditMode.Document.Hint' | translate}}</mat-hint>
         <mat-error *ngIf="parameterDocument && parameterDocument.hasError('maxlength')">
-            Document should be maximum {{parameterDocument.errors.maxlength.requiredLength}} characters long.
+            {{'scriptsForm.Parameters.EditMode.Document.MaxLengthError' | translate:parameterDocument.errors.maxlength}}
         </mat-error>
     </mat-form-field>
 
     <mat-form-field class="m-2">
-        <mat-label>Value Type</mat-label>
+        <mat-label>{{'scriptsForm.Parameters.EditMode.ValueType.Header' | translate}}</mat-label>
         <mat-select matNativeControl
                     formControlName="valueType"
                     required>
-            <mat-option *ngFor="let valueType of valueTypes; let i = index"
-                        [value]="i">
-                {{valueType}}
+            <mat-option [value]="0">
+                {{'scriptsForm.Parameters.EditMode.ValueType.Number'| translate}}
+            </mat-option>
+            <mat-option [value]="1">
+                {{'scriptsForm.Parameters.EditMode.ValueType.Text'| translate}}
             </mat-option>
         </mat-select>
-        <mat-hint>Value Type</mat-hint>
+        <mat-hint>{{'scriptsForm.Parameters.EditMode.ValueType.Hint' | translate}}</mat-hint>
     </mat-form-field>
 
     <mat-form-field class="m-2">
-        <mat-label>Group name</mat-label>
+        <mat-label>{{'scriptsForm.Parameters.EditMode.GroupName.Header' | translate}}</mat-label>
         <input matInput
-               placeholder="Group name"
+               placeholder="{{'scriptsForm.Parameters.EditMode.GroupName.Header' | translate}}"
                formControlName="groupName"
                [errorStateMatcher]="matcher"
                autocomplete="off" />
-        <mat-hint>Group name</mat-hint>
+        <mat-hint>{{'scriptsForm.Parameters.EditMode.GroupName.Hint' | translate}}</mat-hint>
         <mat-error *ngIf="parameterGroupName && parameterGroupName.hasError('maxlength')">
-            Group name should be maximum {{parameterGroupName.errors.maxlength.requiredLength}} characters long.
+            {{'scriptsForm.Parameters.EditMode.GroupName.MaxLengthError' | translate:parameterGroupName.errors.maxlength}}
         </mat-error>
     </mat-form-field>
 
     <div contenteditable="true"
          [innerHtml]="parameterValue.value | html"></div>
-    
+
     <mat-form-field class="m-2 full-width">
         <textarea matInput
                   #value
-                  placeholder="Value"
+                  placeholder="{{'scriptsForm.Parameters.EditMode.Value.Header' | translate}}"
                   formControlName="value"
                   [errorStateMatcher]="matcher"
                   autocomplete="off"></textarea>
-        <mat-hint>Value for parameter</mat-hint>
+        <mat-hint>{{'scriptsForm.Parameters.EditMode.Value.Hint' | translate}}</mat-hint>
         <mat-error *ngIf="parameterValue && parameterValue.hasError('maxlength')">
-            Value should be maximum {{parameterValue.errors.maxlength.requiredLength}} characters long.
+            {{'scriptsForm.Parameters.EditMode.Value.MaxLengthError' | translate:parameterValue.errors.maxlength}}
         </mat-error>
     </mat-form-field>
 
     <div>
-        <button mat-stroked-button 
+        <button mat-stroked-button
                 *ngFor="let parameter of previousParameters"
                 matTooltip="{{parameter.description}}"
-                matTooltipPosition="below" 
+                matTooltipPosition="below"
                 innerHtml="{{parameter.name | html}} [{{parameter.unit | html}}]"
-                 type="button"
+                type="button"
                 (click)="select(parameter)"></button>
     </div>
 
@@ -135,37 +149,37 @@
 
     <mat-form-field class="m-2 full-width">
         <textarea matInput
-                  placeholder="Description"
+                  placeholder="{{'scriptsForm.Parameters.EditMode.Description.Header' | translate}}"
                   formControlName="description"
                   [errorStateMatcher]="matcher"
                   autocomplete="off"></textarea>
-        <mat-hint>Description for parameter</mat-hint>
+        <mat-hint>{{'scriptsForm.Parameters.EditMode.Description.Hint' | translate}}</mat-hint>
         <mat-error *ngIf="parameterDescription && parameterDescription.hasError('maxlength')">
-            Description should be maximum {{parameterDescription.errors.maxlength.requiredLength}} characters long.
+            {{'scriptsForm.Parameters.EditMode.Description.MaxLengthError' | translate:parameterDescription.errors.maxlength}}
         </mat-error>
     </mat-form-field>
 
     <mat-form-field class="m-2 form-medium">
         <input matInput
-               placeholder="Visibility validator"
+               placeholder="{{'scriptsForm.Parameters.EditMode.VisibilityValidator.Header' | translate}}"
                formControlName="visibilityValidator"
                [errorStateMatcher]="matcher"
                autocomplete="off" />
-        <mat-hint>Visibility validator</mat-hint>
+        <mat-hint>{{'scriptsForm.Parameters.EditMode.VisibilityValidator.Hint' | translate}}</mat-hint>
         <mat-error *ngIf="parameterVisibilityValidator && parameterVisibilityValidator.hasError('maxlength')">
-            Visibility validator should be maximum {{parameterVisibilityValidator.errors.maxlength.requiredLength}} characters long.
+            {{'scriptsForm.Parameters.EditMode.VisibilityValidator.MaxLengthError' | translate:parameterVisibilityValidator.errors.maxlength}}
         </mat-error>
     </mat-form-field>
 
     <mat-form-field class="m-2 form-medium">
         <input matInput
-               placeholder="Data validator"
+               placeholder="{{'scriptsForm.Parameters.EditMode.DataValidator.Header' | translate}}"
                formControlName="dataValidator"
                [errorStateMatcher]="matcher"
                autocomplete="off" />
-        <mat-hint>Data validator</mat-hint>
+        <mat-hint>{{'scriptsForm.Parameters.EditMode.DataValidator.Hint' | translate}}</mat-hint>
         <mat-error *ngIf="parameterDataValidator && parameterDataValidator.hasError('maxlength')">
-            Data validator should be maximum {{parameterDataValidator.errors.maxlength.requiredLength}} characters long.
+            {{'scriptsForm.Parameters.EditMode.DataValidator.MaxLengthError' | translate:parameterDataValidator.errors.maxlength}}
         </mat-error>
     </mat-form-field>
 
@@ -178,7 +192,7 @@
         <button mat-stroked-button
                 color="accent"
                 type="submit">
-            {{ newlyAddedParameter ? 'Add' : 'Update'}}
+            {{ newlyAddedParameter ? ('scriptsForm.Parameters.Add' | translate) : ('scriptsForm.Parameters.EditMode.Update' | translate)}}
         </button>
     </div>
 </form>
