--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/value-options-form/value-options-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/value-options-form/value-options-form.component.html
@@ -3,10 +3,10 @@
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title>
-                Value Options
+                {{'scriptsForm.Parameters.ValueOptions.Header' | translate}}
             </mat-panel-title>
             <mat-panel-description>
-                Provide some selectable data
+                {{'scriptsForm.Parameters.ValueOptions.Hint' | translate}}
             </mat-panel-description>
         </mat-expansion-panel-header>
 
@@ -15,12 +15,18 @@
             <div>
                 <mat-radio-group formControlName="valueOptionSetting">
                     <mat-radio-button [value]="valueOptionSettings.None"
-                                      class="ml-2">None</mat-radio-button>
+                                      class="ml-2">
+                        {{'scriptsForm.Parameters.ValueOptions.None' | translate}}
+                    </mat-radio-button>
                     <mat-radio-button [value]="valueOptionSettings.UserInput"
-                                      class="ml-2">Allow any values</mat-radio-button>
+                                      class="ml-2">
+                        {{'scriptsForm.Parameters.ValueOptions.AllowAny' | translate}}
+                    </mat-radio-button>
                     <mat-radio-button [value]="valueOptionSettings.Boolean"
                                       (change)="booleanSettingChecked($event)"
-                                      class="ml-2">Is boolean</mat-radio-button>
+                                      class="ml-2">
+                        {{'scriptsForm.Parameters.ValueOptions.Boolean' | translate}}
+                    </mat-radio-button>
                 </mat-radio-group>
             </div>
 
@@ -30,38 +36,38 @@
                         <div [formGroup]="valueOption">
                             <mat-form-field class="m-2">
                                 <input matInput
-                                       placeholder="Name"
+                                       placeholder="{{'scriptsForm.Parameters.ValueOptions.Name.Header' | translate}}"
                                        formControlName="name"
                                        [errorStateMatcher]="matcher"
                                        autocomplete="off" />
-                                <mat-hint>Name</mat-hint>
+                                <mat-hint>{{'scriptsForm.Parameters.ValueOptions.Name.Hint' | translate}}</mat-hint>
                                 <!--<mat-error *ngIf="parameterDocument && parameterDocument.hasError('maxlength')">
                         Document should be maximum {{parameterDocument.errors.maxlength.requiredLength}} characters long.
                     </mat-error>-->
                             </mat-form-field>
                             <mat-form-field class="m-2">
                                 <input matInput
-                                       placeholder="Value"
+                                       placeholder="{{'scriptsForm.Parameters.ValueOptions.Value.Header' | translate}}"
                                        formControlName="value"
                                        [errorStateMatcher]="matcher"
                                        autocomplete="off" />
-                                <mat-hint>Value</mat-hint>
+                                <mat-hint>{{'scriptsForm.Parameters.ValueOptions.Value.Hint' | translate}}</mat-hint>
                             </mat-form-field>
 
                             <mat-form-field class="m-2 form-medium">
                                 <textarea matInput
-                                          placeholder="Description"
+                                          placeholder="{{'scriptsForm.Parameters.ValueOptions.Description.Header' | translate}}"
                                           formControlName="description"
                                           [errorStateMatcher]="matcher"
                                           autocomplete="off"></textarea>
-                                <mat-hint>Description for value option</mat-hint>
+                                <mat-hint>{{'scriptsForm.Parameters.ValueOptions.Description.Hint' | translate}}</mat-hint>
                             </mat-form-field>
 
                             <button mat-stroked-button
                                     color="warn"
                                     type="button"
                                     (click)="remove(valueOption)">
-                                Remove
+                                {{'scriptsForm.Parameters.ValueOptions.Remove' | translate}}
                             </button>
                         </div>
                     </li>
@@ -70,7 +76,7 @@
                         color="accent"
                         type="button"
                         (click)="addValueOption()">
-                    Add
+                    {{'scriptsForm.Parameters.ValueOptions.Add' | translate}}
                 </button>
             </div>
         </form>
