Translations for value options, tables names

--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
@@ -18,7 +18,7 @@
                           class="mr-3"
                           [ngClass]="valueOption.name"
                           (change)="changeValue($event)">
-            {{valueOption.value }}
+            {{valueOption.name }}
         </mat-radio-button>
         {{parameter.unit | html}}
     </mat-radio-group>
