--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/translation-form/translation-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/translation-form/translation-form.component.html
@@ -7,7 +7,8 @@
     <app-parameter-translation-form [scriptForm]="scriptForm"
                                     [defaultLanguage]="defaultLanguage"
                                     [translationForm]="translationForm"
-                                    [translationData]="translationData"></app-parameter-translation-form>
+                                    [translationData]="translationData"
+                                    #parameterTranslationForm></app-parameter-translation-form>
 
     <div class="flex-column">
         <button mat-stroked-button
