Tests, pagination, translation and searching.

--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-cards/script-cards.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-cards/script-cards.component.html
@@ -4,8 +4,9 @@
                      [script]="script"
                      (deleted)="onDeleted($event)"></app-script-card>
 </div>
-<mat-paginator [length]="scripts.length"
+<mat-paginator [length]="filteredScripts.length"
                [pageSize]="pageSize"
                [pageSizeOptions]="pageSizeOptions"
+               [pageIndex]="pageIndex"
                (page)="onPageChanged($event)">
 </mat-paginator>
