--- a/Build_IT_Web/ClientApp/app/components/nav-menu/nav-menu.component.html
+++ b/Build_IT_Web/ClientApp/app/components/nav-menu/nav-menu.component.html
@@ -13,8 +13,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active"
-                [routerLinkActive]='["link-active"]'
+            <li class="nav-item"
+                [routerLinkActive]='["active"]'
                 [routerLinkActiveOptions]='{ exact: true }'>
                 <a class="nav-link"
                    [routerLink]='["/home"]'>
@@ -22,14 +22,15 @@
                 </a>
             </li>
             <li class="nav-item"
-                [routerLinkActive]='["link-active"]'
+                [routerLinkActive]='["active"]'
                 [routerLinkActiveOptions]='{ exact: true }'>
                 <a class="nav-link"
                    [routerLink]="['/scripts/new']">
                     <span class="fa fa-file-code"></span> {{'app.NewScript' | translate}}
                 </a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown"
+                [routerLinkActive]='["active"]'>
                 <a class="nav-link dropdown-toggle"
                    href="#"
                    id="navbarDropdown"
@@ -53,7 +54,7 @@
             </li>
 
             <li class="nav-item"
-                [routerLinkActive]='["link-active"]'
+                [routerLinkActive]='["active"]'
                 [routerLinkActiveOptions]='{ exact: true }'>
                 <a class="nav-link"
                    [routerLink]="['/about']">
@@ -64,9 +65,12 @@
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li>-->
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0"
+              (ngSubmit)="onSearch()"
+              [formGroup]="searchForm">
             <input class="form-control mr-sm-2"
                    type="search"
+                   formControlName="search"
                    placeholder="{{'app.Search' | translate}}"
                    aria-label="Search">
             <button mat-stroked-button
@@ -79,8 +83,8 @@
 
         <select id="language"
                 [(ngModel)]="configurations.language"
-                #languageSelector="bootstrap-select"
-                bootstrapSelect
+                #languageSelector="element-select"
+                elementSelect
                 class="selectpicker form-control smaller ml-3">
             <option data-subtext="(Default)"
                     value="en">
