--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/checkbox/parameter-checkbox.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/checkbox/parameter-checkbox.component.html
@@ -21,5 +21,5 @@
             {{'scriptCalculator.Controls.True' | translate}}
         </mat-checkbox>
     </div>
-    <p class="parameter-description">{{parameter.description}}</p>
+    <p class="parameter-description-normal">{{parameter.description}}</p>
 </div>
