--- a/Build_IT_Web/ClientApp/app/components/nav-menu/nav-menu.component.html
+++ b/Build_IT_Web/ClientApp/app/components/nav-menu/nav-menu.component.html
@@ -91,6 +91,7 @@
                 {{'app.Languages.English' | translate}}
             </option>
             <option value="pl">{{'app.Languages.Polish' | translate}}</option>
+            <option value="de">{{'app.Languages.German' | translate}}</option>
         </select>
     </div>
 </nav>
