--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
@@ -117,8 +117,8 @@
         </mat-error>
     </mat-form-field>
 
-    <div contenteditable="true"
-         [innerHtml]="parameterValue.value | html"></div>
+    <!--<div contenteditable="true"
+         [innerHtml]="parameterValue.value | html"></div>-->
 
     <mat-form-field class="m-2 full-width">
         <textarea matInput
