Wind load services.

--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/tag-form/tag-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/tag-form/tag-form.component.html
@@ -7,7 +7,7 @@
             {{tagForm.value.name}}
             <span matChipRemove
                   *ngIf="removable"
-                  class="fa fa-remove"></span>
+                  class="fa fa-times"></span>
         </mat-chip>
         <input placeholder="{{'scriptsForm.Tags.AddNewTags' | translate}}"
                #tagInput
